[gd_scene load_steps=2 format=3 uid="uid://badhtonurverj"]

[ext_resource type="Script" path="res://scripts/ui/campaign_screen.gd" id="1_campaign"]

[node name="CampaignScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_campaign")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "< BACK"

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "CAMPAIGN"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0 / 5 Complete"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ContentArea" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BattleListPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentArea/BattleListPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentArea/BattleListPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "BATTLES"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentArea/BattleListPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BattleList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentArea/BattleListPanel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="DetailPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BattleNameLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Select a Battle"
horizontal_alignment = 1

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Difficulty: -"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select a battle to see details."
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RewardLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Reward: -"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartBattleButton" type="Button" parent="MarginContainer/VBoxContainer/ContentArea/DetailPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "START BATTLE"
